fix: avoid helper text wrapping in text input

--- a/src/components/text-input/TextInput.css
+++ b/src/components/text-input/TextInput.css
@@ -88,6 +88,8 @@
 
         & .helperText {
             @mixin typography-body-2 rem;
+            margin-right: 5rem;
+            flex-shrink: 0;
             color: color(var(--color-armadillo) alpha(0.6));
         }
 
